# benchmark-annotation

./: README.md  main.py  pyproject.toml
.cursor/rules/: uv.mdc
src/docx_markup_eval/: __init__.py  annotate.py  cli.py  docx_utils.py  evaluator.py  report.py
tests/: __init__.py  helpers.py  test_scenarios.py
